[package]
name = "alaaarm"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = { version = "0.6.5", default-features = false, features = ["track-caller"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
ureq = { version = "3.1.4", default-features = false }
