[package]
name = "alaaarm"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = { version = "0.6", default-features = false, features = ["track-caller"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
ureq = { version = "3.1", default-features = false, features = ["json", "cookies"] }

